--- a/application/milestone2/src/ProductDonationHome.css
+++ b/application/milestone2/src/ProductDonationHome.css
@@ -2,13 +2,24 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     padding-top: 1%;
 }
 
 .filters {
     float: left;
-    width: 15%;
+    width: 13.5%;
+    text-align: left;
+    vertical-align: top;
+}
+
+h1 { padding-left: 50%; }
+.checkbox { padding-left: 50%; }
+
+.split {
+    float: left;
+    width: 1.5%;
+    height: 100%;
+    background: black;
 }
 
 .items {
