--- a/application/milestone2/frontend/src/TopBar.css
+++ b/application/milestone2/frontend/src/TopBar.css
@@ -18,6 +18,12 @@
   background-color: slategrey;
 }
 
+.appTitle{
+  padding-left: 5px;
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 
 .topRight{
   display: flex;
