started passing data through links and styled links.

--- a/application/milestone3/frontend/src/App.css
+++ b/application/milestone3/frontend/src/App.css
@@ -24,8 +24,9 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.link {
+  color: inherit;
+  text-decoration: none;
 }
 
 @keyframes App-logo-spin {
