--- a/application/milestone3/frontend/src/components/Products.css
+++ b/application/milestone3/frontend/src/components/Products.css
@@ -12,7 +12,7 @@
     vertical-align: top;
 }
 
-h1 { padding-left: 50%; }
+.leftSide { padding-left: 50%; }
 .checkbox { padding-left: 50%; }
 
 .split {
