--- a/application/milestone3/frontend/src/components/Home.css
+++ b/application/milestone3/frontend/src/components/Home.css
@@ -2,40 +2,32 @@
     height: 89.592vh;
 }
 
-.LandingBanner {
+.LandingBanner-bg {
     height: 45%;
-    display: flex;
-    justify-content: center;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
     position: relative;
-    z-index: 2;
-    overflow: hidden;
-    background: #0d1e30;
+
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/handshake.jpeg");
+}
+
+.LandingBanner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 3;
+    color: #fff;
+    text-align: center;
+    text-shadow: 1px 1px 0 rgba(0,0,0,.75);
+    transform: translate3d(-50%,-50%,0);
 }
 
 .LandingBanner h1 {
     z-index: 2;
-    color: white;
 }
 .LandingBanner p {
-    position: relative;
     z-index: 2;
-    color: white;
-}
-
-.LandingBanner:before {
-    content: "";
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 0.6;
-    background-image: url("../images/external-content.duckduckgo.com.jpeg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: center;
 }
 
 .separator {
@@ -47,4 +39,8 @@ div.scrollmenu {
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
+}
+
+h3 {
+    margin-bottom: 0;
 }
