--- a/application/milestone3/frontend/src/components/Card.css
+++ b/application/milestone3/frontend/src/components/Card.css
@@ -1,6 +1,6 @@
 .card > img{
-    width: 100%;
-    height: 100%;
+    width: 175px;
+    height: auto;
     margin: 0 0;
 }
 
@@ -9,7 +9,7 @@
 }
 
 .card{
-    width: 300px;
+    width: 250px;
     padding: 10px;
     font-family: arial;
     justify-content: left;
