links moved to cards so the <link> doesn't need to be used so often

--- a/application/milestone3/frontend/src/components/Card.css
+++ b/application/milestone3/frontend/src/components/Card.css
@@ -10,9 +10,11 @@
 
 .card{
     width: 250px;
+    height: 300px;
     padding: 10px;
     font-family: arial;
     justify-content: left;
+    margin: 2px 2px;
 }
 
 .card > h2{
