--- a/application/milestone3/frontend/src/components/Card.css
+++ b/application/milestone3/frontend/src/components/Card.css
@@ -1,7 +1,8 @@
 .card > img{
     width: 175px;
     height: auto;
-    margin: 0 0;
+    margin: auto auto;
+    display: block;
 }
 
 .card:hover{
@@ -13,8 +14,8 @@
     height: 300px;
     padding: 10px;
     font-family: arial;
-    justify-content: left;
-    margin: 2px 2px;
+    justify-content: center;
+    margin: 0px 5px;
 }
 
 .card > h2{
