--- a/application/milestone3/frontend/src/components/Home.css
+++ b/application/milestone3/frontend/src/components/Home.css
@@ -37,6 +37,7 @@ div.scrollmenu {
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
+    overflow-y: hidden;
     margin: 15px 0;
 }
 
