Upload image successful

--- a/application/milestone3/frontend/src/components/User.css
+++ b/application/milestone3/frontend/src/components/User.css
@@ -26,3 +26,26 @@
     color: black;
     margin-left: 70px;
 }
+
+.button{
+    color: white;
+    background-color: #ff7779;
+    padding: 10px;
+    border: none;
+}
+
+.descriptionText{
+    height: 80px;
+}
+
+input{
+    padding: 5px;
+}
+
+.postButton{
+    color: white;
+    background-color: #ff7779;
+    padding: 10px;
+    border: none;
+    margin-left: 70px;
+}
