Added more raw posts

--- a/application/milestone3/frontend/src/components/NavBar.css
+++ b/application/milestone3/frontend/src/components/NavBar.css
@@ -24,6 +24,13 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.button{
+  margin: 2px;
+}
+
+input{
+  margin: 3px;
+}
 
 .topRight{
   display: flex;
