--- a/application/milestone3/frontend/src/components/ProductPost.css
+++ b/application/milestone3/frontend/src/components/ProductPost.css
@@ -1,10 +1,11 @@
 img{
     margin: 20px;
     margin-top: 40px;
-    width: 900px;
+    width: auto;
     height: 350px;
     border-radius: 9px;
     overflow: hidden;
+
 }
 
 .donationPrompt{
@@ -18,7 +19,7 @@ img{
 }
 
 .donateButton > button{
-    color: white;
+    color: black;
     background-color: #ff7779;
     text-transform: inherit;
 }
@@ -26,7 +27,10 @@ img{
 .topSection{
     display: flex;
     align-items: center;
+
 }
+
+
 
 .bottomSection .heading .productTitle> h2{
     margin-left: 20px;
