--- a/application/milestone3/frontend/src/components/Chat.css
+++ b/application/milestone3/frontend/src/components/Chat.css
@@ -40,7 +40,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   border: none;
   background: #f1f1f1;
   resize: none;
-  min-height: 200px;
+  min-height: 100px;
 }
 
 /* When the textarea gets focus, do something */
@@ -51,7 +51,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Set a style for the submit/send button */
 .form-container .btn {
-  background-color: #4CAF50;
+  background-color: #ff7779;
   color: white;
   padding: 16px 20px;
   border: none;
@@ -63,10 +63,20 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Add a red background color to the cancel button */
 .form-container .cancel {
-  background-color: red;
+  background-color: slategray;
 }
 
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
   opacity: 1;
+}
+
+.right {
+  float: right;
+}
+
+ul {
+  margin-bottom: 5px;
+  list-style-type: none;
+  padding: 0px;
 }
