fix: auto strech

--- a/application/milestone3/frontend/src/components/FundraiserPost.css
+++ b/application/milestone3/frontend/src/components/FundraiserPost.css
@@ -1,7 +1,7 @@
-img{
+.fundImage{
     margin: 20px;
     margin-top: 40px;
-    width: 900px;
+    width: auto;
     height: 350px;
     border-radius: 9px;
     overflow: hidden;
