--- a/application/milestone3/frontend/src/components/register.css
+++ b/application/milestone3/frontend/src/components/register.css
@@ -1,5 +1,5 @@
 
-.form-header {
+.formHeader {
     margin-top: 50px;
     width: 100%;
     display: inline-block;
@@ -7,14 +7,14 @@
     margin-bottom: 30px;
 }
 
-.form-header > hr {
+.formHeader > hr {
     width: 450px;
     display: inline-block;
     text-align: center;
     margin-bottom: 30px;
 } 
 
-.form-body {
+.formBody {
     display: table;
     margin: 0 auto;
 }
@@ -28,7 +28,7 @@ form  > input {
 }
 
 /* Sign up button */
-.form-button > button {
+.signupButton > button {
     color: black;
     background-color: white;
     border-color: lightcoral;
@@ -42,7 +42,7 @@ form  > input {
     font-weight: bold;
     font-size: 16px;
 }
-.form-button > button:hover {
+.signupButton > button:hover {
     color: white;
     background-color: lightcoral;
     border-color: lightcoral;
