--- a/application/milestone3/frontend/src/components/css/Home.css
+++ b/application/milestone3/frontend/src/components/css/Home.css
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     position: relative;
 
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/handshake.jpeg");
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../images/handshake.jpeg");
 }
 
 .LandingBanner {
