--- a/application/milestone3/frontend/src/components/css/Fundraisers.css
+++ b/application/milestone3/frontend/src/components/css/Fundraisers.css
@@ -1,4 +1,15 @@
 .donationHeading{
     text-align: left;
     margin-left: 39px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button{
+    color: white;
+    background-color: #ff7779;
+    padding: 10px;
+    border: none;
+    text-align: center;
+    display: inline-block;
 }
