--- a/application/milestone3/frontend/src/components/css/Chat.css
+++ b/application/milestone3/frontend/src/components/css/Chat.css
@@ -3,7 +3,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Button used to open the chat form - fixed at the bottom of the page */
 .open-button {
-  background-color: #555;
+  background-color: slategray;
   color: white;
   padding: 16px 20px;
   border: none;
@@ -15,25 +15,34 @@ body {font-family: Arial, Helvetica, sans-serif;}
   width: 280px;
 }
 
-/* The popup chat - hidden by default */
-.chat-popup {
+.userList {
   display: none;
   position: fixed;
   bottom: 0;
   right: 15px;
   border: 3px solid #f1f1f1;
+  z-index: 0;
+}
+
+/* The popup chat - hidden by default */
+.chat {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  border: 3px solid #f1f1f1;
   z-index: 9;
+  right: 336px;
 }
 
 /* Add styles to the form container */
-.form-container {
+.container {
   max-width: 300px;
   padding: 10px;
   background-color: white;
 }
 
 /* Full-width textarea */
-.form-container textarea {
+.container textarea {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -44,13 +53,13 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 /* When the textarea gets focus, do something */
-.form-container textarea:focus {
+.container textarea:focus {
   background-color: #ddd;
   outline: none;
 }
 
 /* Set a style for the submit/send button */
-.form-container .btn {
+.container .btn {
   background-color: #ff7779;
   color: white;
   padding: 16px 20px;
@@ -62,12 +71,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 /* Add a red background color to the cancel button */
-.form-container .cancel {
+.container .cancel {
   background-color: slategray;
 }
 
 /* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
+.container .btn:hover, .open-button:hover {
   opacity: 1;
 }
 
