--- a/application/milestone3/frontend/src/components/css/Chat.css
+++ b/application/milestone3/frontend/src/components/css/Chat.css
@@ -2,7 +2,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
 /* Button used to open the chat form - fixed at the bottom of the page */
-.open-button {
+.link .open-button {
   background-color: slategray;
   color: white;
   padding: 16px 20px;
