--- a/application/milestone3/frontend/src/components/css/NavBar.css
+++ b/application/milestone3/frontend/src/components/css/NavBar.css
@@ -84,7 +84,7 @@ input{
 
 .userLink{
   margin: 30px;
-  padding: 10px;
+  padding-top: 10px;
 }
 
 .popup {
@@ -117,14 +117,9 @@ input{
 .login-button {
   background-color: white;
   border-color: rgba(88, 88, 250, 0.979);
-  border-radius: 5px;
-  padding: 10px;
   color: black;  
   text-align: center;
   font-size: 16px;
-  width: 150px;
-  margin-bottom: 20px;
-  display: inline-block;
 }
 .login-button:hover {
   background-color:  rgba(88, 88, 250, 0.979);
