--- a/application/milestone3/frontend/src/components/css/Home.css
+++ b/application/milestone3/frontend/src/components/css/Home.css
@@ -43,14 +43,8 @@ div.scrollmenu {
     margin: 15px 0;
 }
 
-h1 {
-    font-size: 3vw;
-}
 h3 {
     margin-bottom: 0;
-}
-p {
-    font-size: 1.32vw;
 }
 
 .buttonLink{
@@ -65,3 +59,24 @@ p {
   hr {
       margin: 15px;
   }
+
+@media screen and (min-width: 601px) {
+    .statement {
+        font-size: 18px;
+    }
+
+    h1 {
+        font-size: 48px;
+    }
+}
+  
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+    .statement {
+        font-size: 11px;
+    }
+    h1 {
+        font-size: 20px;
+    }
+    
+}
