--- a/application/milestone3/frontend/src/components/css/NavBar.css
+++ b/application/milestone3/frontend/src/components/css/NavBar.css
@@ -27,21 +27,11 @@
 }
 
 input{
-  margin: 3px;
+  margin: 7px;
 }
-
-.topRight{
-  display: flex;
-  align-items: center;
-  margin-right: 70px;
-  justify-content: space-between;
-  width: 10vw;
-}
-
-.topRight > button{
-  color: white;
-  background-color: #ff7779;
-  text-transform: inherit;
+.accountViews {
+  height: auto;
+  margin-right: 30px;
 }
 
 .createPostButton > button{
@@ -53,7 +43,7 @@ input{
 .search{
   display: flex;
   align-items: center;
-  height: 15px;
+  height: 42px;
   padding: 15px;
   max-width: fit-content;
   border: 1px solid lightgray;
@@ -66,6 +56,12 @@ input{
   outline-width: 0;
   border: none;
   width: 300px;
+}
+
+.searchLine {
+  height: 36px;
+  border-left: 1px solid rgba(56, 56, 56, 0.144);
+  margin: 7px
 }
 
 .dropDown {
@@ -83,8 +79,7 @@ input{
 }
 
 .userLink{
-  margin: 30px;
-  padding-top: 10px;
+  margin-left: 24px;
 }
 
 .popup {
