--- a/application/milestone3/frontend/src/components/css/Fundraisers.css
+++ b/application/milestone3/frontend/src/components/css/Fundraisers.css
@@ -13,3 +13,10 @@
     text-align: center;
     display: inline-block;
 }
+
+#newFundraiserForm{
+    text-align: right;
+    margin-left: auto;
+    padding: 10px;
+    display: inline-block;
+}
