--- a/application/milestone3/frontend/src/components/css/Card.css
+++ b/application/milestone3/frontend/src/components/css/Card.css
@@ -1,24 +1,30 @@
 .card > img{
-    width: 175px;
-    height: 175px;
-    margin: auto auto;
     display: block;
+    width:100%;
+    max-height:175px;
+    /* max-width: 175px; */
+    padding:10px;
+    object-fit: cover;
 }
+
 
 .card:hover{
     transform: scale(1.08);
 }
 
+
 .card{
     width: 250px;
     height: 300px;
     padding: 10px;
+    overflow:hidden;
     margin: 10px 5px;
     font-family: arial;
-    justify-content: center;
-    -webkit-box-shadow: 5px 5px 16px -6px rgba(0,0,0,0.65); 
+    justify-content:center;
+    -webkit-box-shadow: 5px 5px 16px -6px rgba(0,0,0,0.65);
     box-shadow: 5px 5px 16px -6px rgba(0,0,0,0.65);
     background-color: white;
+
 }
 
 .card > h2{
