browser pages setup

--- a/application/milestone3/frontend/src/components/css/Card.css
+++ b/application/milestone3/frontend/src/components/css/Card.css
@@ -31,3 +31,11 @@
     padding-top: 12px;
     text-align: center;
 }
+.card > h3{
+    padding-top: 12px;
+    text-align: center;
+}
+.card > h4{
+    padding-top: 12px;
+    text-align: center;
+}
