--- a/application/milestone3/frontend/src/components/css/User.css
+++ b/application/milestone3/frontend/src/components/css/User.css
@@ -1,3 +1,12 @@
+.pfBanner {
+    padding-left: 16vw;   
+    background-color: slategray;
+    margin-left: 0;
+    margin-right: 0;
+    left: 0;
+    right: 0;
+}
+
 .topLeft{
     margin-left: 70px;
     display: flex;
